# SimpleTgUtils

./: CMakeLists.txt  README.md
include/simple/: tg_backup.hpp  tg_bot.hpp  tg_logger.hpp
include/simple_tg_logger/: simple_tg_logger.hpp
sources/: simple_tg_logger.cpp  tg_backup.cpp  tg_bot.cpp  tg_logger.cpp
